<resources>
    <string name="app_name">EAC3-2016S1</string>
    <string name="action_settings">Settings</string>
    <string name="action_profile">Perfil</string>
    <string name="action_viewmap">Vista Maps</string>
    <string name="title_mainActivity">JobTomorrow</string>
    <string name="desp_foto_profile">Foto Perfil</string>
    <string name="placeholder_nom">Nom</string>
    <string name="placeholder_cognom">Cognom</string>
    <string name="placeholder_sobretu">Explica\'ns sobre tu ...</string>
    <string name="text_btn_acceptar">ACCEPTA</string>
    <string name="text_btn_cancelar">CANCEL·LA</string>
    <string name="title_activity_maps_map">EAC3-2016S1</string>

    <string name="title_offer">Offer</string>
    <string name="description_offer">Description Offer</string>
    <string name="phone_offer">phone_offer</string>
    <string name="data_offer">data_offer</string>

    <string name="view_maps">Vistes Maps</string>
    <string name="map_normal">Vista Normal</string>
    <string name="map_terrain">Vista Terreno</string>
    <string name="map_satellite">Vista Satelite</string>
    <string name="map_hibrid">Vista Hidrida</string>
    <string name="map_viewexit">Exit</string>


    <string-array name="sexe">
        <item>Home</item>
        <item>Dona</item>
    </string-array>


</resources>
