<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.ioc.robertogarciacorcoles.eac3_2016s1.ShowOfferActivity">

    <!-- Items Toolbar de menu ShowOffer -->
    <item
        android:id="@+id/action_mapNormal"
        android:title="@string/map_normal"
        android:orderInCategory="1"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_mapTerrain"
        android:title="@string/map_terrain"
        android:orderInCategory="2"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_mapHybrid"
        android:title="@string/map_satellite"
        android:orderInCategory="3"
        app:showAsAction="never"/>


    <item
        android:id="@+id/action_mapSatellite"
        android:title="@string/map_hibrid"
        android:orderInCategory="4"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_exit"
        android:title="@string/map_viewexit"
        android:orderInCategory="4"
        app:showAsAction="never"/>

</menu>


