<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_show_offer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.ioc.robertogarciacorcoles.eac3_2016s1.ShowOfferActivity">


    <TextView
        android:text="@string/title_offer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:id="@+id/tvtitolOffer" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_marginTop="10dp">
    <TextView
        android:text="@string/description_offer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:id="@+id/tvdescripcionOffer"/>
    </ScrollView>


    <!-- Linear Layout references -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:weightSum="1"
        android:id="@+id/LinearLayoutReferences">

        <!-- Linear Layout phone -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".50"
                android:orientation="horizontal"
                android:gravity="start"
                android:id="@+id/LinearLayoutphone">

                <ImageButton
                    android:id="@+id/btnPhone"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:clickable="false"
                    android:focusable="false"
                    android:src="@drawable/ic_phone25" />

                <TextView
                    android:text="@string/phone_offer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginTop="15dp"
                    android:id="@+id/tvphoneOffer"/>
            </LinearLayout> <!-- .end Linear Layout phone -->

            <!-- Linear Layout data -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight=".50"
                android:gravity="end"
                android:id="@+id/LinearLayoutdata">

                <TextView
                    android:text="@string/phone_offer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginTop="15dp"
                    android:id="@+id/tvdataOffer"/>

                <ImageButton
                    android:id="@+id/btndata"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:clickable="false"
                    android:focusable="false"
                    android:src="@drawable/ic_clock25" />
            </LinearLayout> <!-- .end Linear Layout data -->
        </LinearLayout> <!-- .end Final Layout References -->

    <!-- fragment Map Maps -->
    <fragment
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:id="@+id/offerMap">
    </fragment> <!-- .end fragment Map Maps -->

</LinearLayout>
